# Page-analyzer

./: ..env.swp  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  database.sql  docker-compose.yml  pyproject.toml
page_analyzer/: app.py  celery_config.py  database.py  parser.py  tasks.py  url_processing.py
page_analyzer/templates/: 404.html  500.html  base.html  index.html  url.html  urls.html
